# platform

./: .gitignore  README.md  docker-compose.yml
dashboard/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.jsx  index.css
dashboard/src/components/: StatusBadge.jsx
dashboard/src/hooks/: use-auth.jsx  use-onboarding.jsx  use-toast.jsx
dashboard/src/lib/: api.js  (+2 more)
server/: .dockerignore  Cargo.toml  Dockerfile
server/migrations/: 20260218000000_initial.sql  20260304000000_kyb.sql  20260305000000_add_transaction_failure_reason.sql  20260305100000_kyb_verification_fields.sql  20260306000000_session_otp_flow.sql  20260307000000_customers_and_environment.sql  20260308000000_features_batch.sql  20260327000000_session_otp_and_fees.sql
server/src/: config.rs  errors.rs  main.rs
server/src/db/: mod.rs
server/src/db/models/: api_key.rs  business.rs  common.rs  currency.rs  customer.rs  dispute.rs  kyb.rs  mod.rs  notification.rs  refund.rs  session.rs  settlement.rs  team.rs  transaction.rs  webhook.rs
server/src/handlers/: analytics.rs  api_keys.rs  audit.rs  auth.rs  currencies.rs  customers.rs  disputes.rs  exports.rs  infra.rs  kyb.rs  mod.rs  notifications.rs  payments.rs  refunds.rs  settings.rs  settlements.rs  team.rs  transactions.rs  webhooks.rs
server/src/middleware/: api_key.rs  dashboard_auth.rs  mod.rs  rate_limit.rs
server/src/services/: email.rs  mod.rs  switch.rs  webhook_delivery.rs
server/src/services/interswitch/: auth.rs  crypto.rs  identity.rs  mod.rs  payment.rs  types.rs
(+50 files in other folders)
